profilelist1exp/unpackaged/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>Bid_Builder_Enabled__c</fullName>
        <label>RFP &amp; Proposal Express Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bid_Builder_Partner_Relationship__c</fullName>
        <label>Partner Relationship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Titanium Black</fullName>
                </value>
                <value>
                    <fullName>Titanium</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Authorized Reseller</fullName>
                </value>
                <value>
                    <fullName>Federal Registered</fullName>
                </value>
                <value>
                    <fullName>Federal Certified</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized</fullName>
                </value>
                <value>
                    <fullName>Federal System Integrator</fullName>
                </value>
                <value>
                    <fullName>Client products</fullName>
                </value>
                <value>
                    <fullName>Client Servers and Networking</fullName>
                </value>
                <value>
                    <fullName>Servers Storage and Networking</fullName>
                </value>
                <value>
                    <fullName>Client Servers Storage and Networking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -ISO 3166 Country Code||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <externalId>true</externalId>
        <label>ISO 3166-1 Country Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact_AVS_Enable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Country with Address Verification System enable (AVS)</description>
        <label>Contact_AVS_Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Support_Email__c</fullName>
        <label>Contract Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Custom_Service_Solution_EMail__c</fullName>
        <label>Custom Service Solution EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DNB_COUNTRY_CODE__c</fullName>
        <description>Country Code for DNB</description>
        <label>DNB COUNTRY CODE</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DNB_ISO_Country_Code__c</fullName>
        <label>DNB ISO Country Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNB_Region__c</fullName>
        <label>DNB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMER</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Registration_Enabled__c</fullName>
        <label>Deal Registration Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dell_ISV_Terms_Conditions_URL__c</fullName>
        <description>CR 2612 - Add new field in country for ISV Term &amp; Condition</description>
        <label>Dell Technology Partner T &amp; C URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dell_MFT_Partner_URL__c</fullName>
        <description>CR13300</description>
        <label>Dell MFT Partner URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dell_OEM_Technology_Partner_T_C_URL__c</fullName>
        <label>Dell OEM Technology Partner T &amp; C URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dell_Online_Country_Code__c</fullName>
        <label>Dell Online Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dell_Online_Terms_Conditions_URL__c</fullName>
        <label>Dell Online Terms &amp; Conditions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dell_Partner_Finder_Terms_Conditions_URL__c</fullName>
        <label>Dell Partner Finder Terms&amp;Conditions URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dial_Code__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Dial Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Partner_Program_TC_URL__c</fullName>
        <description>Add new field in country for Distributor Partner Program Term &amp; Condition</description>
        <label>Distributor Partner Program T &amp; C URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DnB_Supported_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supported countries from DnB</description>
        <label>DnB Supported Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_AVS_for_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box will be true if address validation using AVS system is enabled at the country level</description>
        <label>Enable AVS for Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_for_FAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable for FAP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enabled_Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled Deal Auto Renewal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAP_Country_Value__c</fullName>
        <label>FAP Country Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAP_Region__c</fullName>
        <label>FAP Region</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inc_Vendor_End_Point__c</fullName>
        <description>Vendor Service end-point that salesforce uses to pass information.</description>
        <inlineHelpText>Webservice end point for Vendor</inlineHelpText>
        <label>Incentives End Point</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Inc_Vendor_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>https://www.dellachievers.com</fullName>
                </value>
                <value>
                    <fullName>https://www.dellpartnerincentives.com/UserManagement/UserManagementService.svc/Process</fullName>
                </value>
                <value>
                    <fullName>https://dell.performnet.com/dell/rest/accountMaintenance.biws</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inc_Vendor_Name__c</fullName>
        <description>Identifies the vendor who runs the incentives program for the logged in-users.</description>
        <inlineHelpText>Not Applicable / On Hold  - Not enabled for Incentives
PartnerDirect Rewards Center    - Enabled for Incentives - BINA
Partner Advantage    - Enabled for Incentives - BIEU
Dell Achievers - Enabled for Incentives - GRG</inlineHelpText>
        <label>Incentives Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable/On Hold</fullName>
                    <default>true</default>
                    <label>Not Applicable/On Hold</label>
                </value>
                <value>
                    <fullName>Partner Direct Rewards Center</fullName>
                </value>
                <value>
                    <fullName>Partner Advantage</fullName>
                </value>
                <value>
                    <fullName>Dell Achievers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active_Partner_Country__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Is Active Partner Country</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active_in_Affinity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active in Affinity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Update_triggered_by_DL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the particular country record is updated via data load</description>
        <inlineHelpText>Checked: Will not trigger Vendor integration if value = TRUE and Vendor Update Required = FALSE set via DL
Unchecked: Will trigger Vendor integration if value = FALSE and Vendor Update Required = TRUE set via DL</inlineHelpText>
        <label>Is Dataloader Triggered Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vendor_Update_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the particular country record need to be synced to incentive vendor system</description>
        <inlineHelpText>Checked: Integration with Vendor is required
Unchecked: Integration with Vendor is not required</inlineHelpText>
        <label>Vendor Update Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vendor_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the date changes have been synced to incentive vendor system by BOOMI</description>
        <label>Is Vendor Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Operation_Performed__c</fullName>
        <description>The last process happen to the particular record, such as SFDC updated, Vendor updated, Vendor Update Failure.</description>
        <inlineHelpText>SFDC_UPDATED: Waiting for Vendor response
VENDOR UPDATED: Successfully integrated with Vendor
VENDOR SYNC FAILED: Integration with Vendor failed</inlineHelpText>
        <label>Last Operation Performed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Management_Enabled__c</fullName>
        <description>Enable/Disable lead Management for Partner Relationship Type of non-OEM Accounts</description>
        <label>Lead Management Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Management_Enabled_for_OEM__c</fullName>
        <description>Enable/Disable lead Management for Partner Relationship Type of non-OEM Accounts</description>
        <label>Lead Management Enabled for OEM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operation_for_Boomi__c</fullName>
        <description>The operation that BOOMI need to perform when sync data over to incentive vendor system, such as add new record, update existing record</description>
        <inlineHelpText>ENABLE_COUNTRY: Message to enable access at a country level - Grassroots/BIEU only
DISABLE_COUNTRY: Message to disable access at a country level - Grassroots/BIEU only</inlineHelpText>
        <label>Operation for Boomi</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ENABLE_COUNTRY</fullName>
                </value>
                <value>
                    <fullName>DISABLE_COUNTRY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Won_Lost_Region__c</fullName>
        <label>Opportunity Won/Lost Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABU</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Finder_Enabled__c</fullName>
        <label>Partner Finder Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Relationship__c</fullName>
        <description>Enable/Disable lead Management for Partner Relationship Type of non-OEM Accounts</description>
        <label>Partner Relationship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Lead_Management_Enabled__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Titanium Black</fullName>
                </value>
                <value>
                    <fullName>Titanium</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Authorized Reseller</fullName>
                </value>
                <value>
                    <fullName>Federal Registered</fullName>
                </value>
                <value>
                    <fullName>Federal Certified</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized</fullName>
                </value>
                <value>
                    <fullName>Federal System Integrator</fullName>
                </value>
                <value>
                    <fullName>Client products</fullName>
                </value>
                <value>
                    <fullName>Client Servers and Networking</fullName>
                </value>
                <value>
                    <fullName>Servers Storage and Networking</fullName>
                </value>
                <value>
                    <fullName>Client Servers Storage and Networking</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Relationship_for_OEM__c</fullName>
        <description>Enable/Disable lead Management for Partner Relationship Type of OEM Accounts</description>
        <label>Partner Relationship  for OEM</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Lead_Management_Enabled_for_OEM__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Preferred</fullName>
                </value>
                <value>
                    <fullName>Premier</fullName>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                </value>
                <value>
                    <fullName>Titanium Black</fullName>
                </value>
                <value>
                    <fullName>Titanium</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Authorized Reseller</fullName>
                </value>
                <value>
                    <fullName>Federal Registered</fullName>
                </value>
                <value>
                    <fullName>Federal Certified</fullName>
                </value>
                <value>
                    <fullName>Federal GSA Authorized</fullName>
                </value>
                <value>
                    <fullName>Federal System Integrator</fullName>
                </value>
                <value>
                    <fullName>Client products</fullName>
                </value>
                <value>
                    <fullName>Client Servers and Networking</fullName>
                </value>
                <value>
                    <fullName>Servers Storage and Networking</fullName>
                </value>
                <value>
                    <fullName>Client Servers Storage and Networking</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Support_Email__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Partner Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Support_Queue_ID__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Partner Support Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Support_Email__c</fullName>
        <label>Proposal Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Public_Portal_Home_URL__c</fullName>
        <label>Public Portal Home URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rebate_Enabled__c</fullName>
        <label>Rebate Enabled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EC-EMEA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Agree_Both_Dell_ResellerISV__c</fullName>
        <label>Require Agree Both Dell ResellerISV</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Agree_Both_Dell_ResellerISV__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Agree_Dell_ISV_Program__c</fullName>
        <label>Require Agree Dell ISV Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Agree_Dell_ISV_Program__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Agree_Dell_Partner_Dist_Pro__c</fullName>
        <label>Require Agree Dell Partner Dist Pro</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Agree_Dell_Partner_Dist_Pro__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Agree_Dell_Partner_Dist_Sup__c</fullName>
        <label>Require Agree Dell Partner Dist Sup</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Agree_Dell_Partner_Dist_Sup__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Agree_Dell_Reseller__c</fullName>
        <label>Require Agree Dell Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Agree_Dell_Reseller__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Boutique_Firm__c</fullName>
        <label>Require Boutique Firm</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Boutique_Firm__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Currently_Selling_Dell__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Currently Selling Dell</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Currently_Selling_Dell__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Dell_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Dell Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Dell_Revenue_Percent__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Distributor__c</fullName>
        <label>Require Distributor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Distributor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Export_Compliance_Agreed__c</fullName>
        <label>Require Export Compliance Agreed</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Export_Compliance_Agreed__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Hardware_Reseller__c</fullName>
        <label>Require Hardware Reseller</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Hardware_Reseller__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Hardware_Revenue_Percent__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF -Y - PRM Duplicate Partner Registration Account Owner Notification/ APP/ FU / OM - N ||Email alert -Y:PRM Duplicate Partner Registration Account Owner Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Require Hardware Revenue Percent</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Hardware_Revenue_Percent__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Have_read_Partner_Program_Guide__c</fullName>
        <label>Require Have read Partner Program Guide</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Have_read_Partner_Program_Guide__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_ISV__c</fullName>
        <label>Require ISV</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_ISV__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Join_Dell_PartnerDirect_Program__c</fullName>
        <label>Require Join Dell PartnerDirect Program</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Join_Dell_PartnerDirect_Program__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Large_Enterprise__c</fullName>
        <label>Require Large Enterprise</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Large_Enterprise__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Managed_Service_Provider__c</fullName>
        <label>Require Managed Service Provider</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Managed_Service_Provider__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_Number_of_Branches_Subsidiaries__c</fullName>
        <label>Require Number of Branches Subsidiaries</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_Number_of_Branches_Subsidiaries__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Require_OEM__c</fullName>
        <label>Require OEM</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Show_OEM__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>